# mavsdk-PX4-Dynamic-Waypoint-Update

./: CMakeLists.txt  coordinates.cpp  coordinates.h  takeoff_and_land(prototype).cpp  takeoff_and_land.cpp
